--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Beers</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Rum+Raisin&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="pub\reset.css">
     <link rel="stylesheet" href="pub\style.css">
     <script src="pub\script.js"></script>
 </head>
