fix local and github pages

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Rum+Raisin&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="pub\reset.css">
-    <link rel="stylesheet" href="pub\style.css">
-    <script src="pub\script.js"></script>
+    <link rel="stylesheet" href="public\reset.css">
+    <link rel="stylesheet" href="public\style.css">
+    <script src="public\script.js"></script>
 </head>
 <body>
 	<div id="root"></div>
